Bug 162510 - Scroll bar goes missing from Start Center after pinned documents span two rows
Summary: Scroll bar goes missing from Start Center after pinned documents span two rows
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.2.0
Keywords: implementationError
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2024-08-18 09:12 UTC by recke22
Modified: 2024-12-05 07:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Main screen full (3 lines), non-pinned documents are not shown (199.04 KB, image/jpeg)
2024-08-18 09:12 UTC, recke22
Details
Main screen not full, non-pinned documents are now shown => no scroll bar (248.67 KB, image/jpeg)
2024-08-18 09:14 UTC, recke22
Details

Note You need to log in before you can comment on or make changes to this bug.
Description recke22 2024-08-18 09:12:19 UTC
Created attachment 195889 [details]
Main screen full (3 lines), non-pinned documents are not shown

Main screen shows (in my resolution) 3 lines of documents. If all rows are full with pinned documents non-pinned documents are not shown even if last line is not full.
Also no scroll bar is shown.
Comment 1 recke22 2024-08-18 09:14:21 UTC
Created attachment 195890 [details]
Main screen not full, non-pinned documents are now shown => no scroll bar
Comment 2 Buovjaga 2024-10-03 05:23:38 UTC
I checked and it has been this way since the feature was implemented in 7.6 as bug 38742. The point is the missing scroll bar. I think the separation of the pinned docs from unpinned ones is intended behaviour.
Comment 3 Andreas Heinisch 2024-10-22 11:17:21 UTC
Checked to fix it on my side, but IMHO not that easy to overcome the limitations of the current implementation using a new line after the pinned items since the number of lines etc. change during a scroll process with an extra pinned line. 

It can be easily fixed by just removing the extra line. @Heiko what do you think? Is this extra line really needed?
Comment 4 Heiko Tietze 2024-10-22 12:09:07 UTC
(In reply to Buovjaga from comment #2)
> The point is the missing scroll bar. I think the separation of
> the pinned docs from unpinned ones is intended behaviour.
I 100% agree with Ilmari
Comment 5 Commit Notification 2024-10-28 18:31:53 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/100743f8ad5a2328810af8b2ee19e535850ec901

tdf#162510 - Consider pinned items for the scroll bar in the start center

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Buovjaga 2024-10-29 16:14:10 UTC
Verified, thanks

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7b91fc00a01e973937861a212750b12ffaaf9501
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 29 October 2024