tdf#162510 - Consider pinned items for the scroll bar in the start center

Change-Id: If753ab1ea0df0bc7938532f6e614b94252fa3f9b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175681
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>